radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-dns"
spec:
  tls:
    - hosts:
        - radarr.basalt.ozeliurs.com
      secretName: radarr-tls
  rules:
    - host: radarr.basalt.ozeliurs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
